Adicionando tratamento para exceções

--- a/src/main/resources/database/myDb.properties
+++ b/src/main/resources/database/myDb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Wed Apr 10 07:03:28 BRT 2024
-tx_timestamp=124
-modified=yes
+#Sat Apr 13 14:24:19 BRT 2024
+tx_timestamp=1674
+modified=no
 version=2.7.1
