--- a/src/main/resources/database/myDb.properties
+++ b/src/main/resources/database/myDb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Sat Apr 13 14:24:19 BRT 2024
-tx_timestamp=1674
-modified=no
+#Mon Apr 15 18:39:53 BRT 2024
+tx_timestamp=3954
+modified=yes
 version=2.7.1
