--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.7.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
